# fastapi-admin

./: .env  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README-ko.md  README-zh.md  README.md  README.rst  babel.cfg  build.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflow/: gh-pages.yml  pypi.yml
.github/workflows/: deploy.yml  docs.yml  gh-pages.yml  pypi.yml
docs/: api_reference.rst  conf.py  content.md  examples.rst  fastapi_admin.routes.rst  fastapi_admin.rst  features.md  get_start.rst  getting_started.zh.md  index.rst  requirements.txt  tutorial.md
docs/en/: mkdocs.yml
docs/en/docs/custom/: action.md  admin_log.md  file.md  login.md  overwrite.md  page.md  permission.md  provider.md  widget.md
docs/en/docs/getting_started/: installation.md  quick_start.md  quickstart.md
docs/en/docs/pro/: exclusive.md  index.md  installation.md  sponsor.md  support.md  upgrade.md
docs/en/docs/reference/: admin_log.md  bulk_actions.md  errors.md  file_upload.md  global_search.md  index.md  login.md  middleware.md  notification.md  permission.md  resource.md
docs/zh/: mkdocs.yml
docs/zh/docs/: index.md
docs/zh/docs/getting_started/: installation.md  quickstart.md
docs/zh/docs/pro/: sponsor.md
examples/: Dockerfile  __init__.py  common.py  constants.py  enums.py  example.sql  filters.py  main.py  models.py  providers.py  resources.py  routes.py  settings.py
examples/templates/: base.html  dashboard.html  home.html  password.html
examples/templates/providers/login/: password.html
fastapi_admin/: __init__.py  app.py  cli.py  common.py  constants.py  depends.py  enum.py  enums.py  exceptions.py  factory.py  file_upload.py  filters.py  i18n.py  middlewares.py  models.py  resources.py  responses.py  routes.py  schemas.py  shortcuts.py  site.py  template.py  utils.py
fastapi_admin/locales/en_US/LC_MESSAGES/: messages.mo  messages.po
fastapi_admin/providers/: __init__.py  file_upload.py  login.py
fastapi_admin/routes/: __init__.py  index.py  login.py  other.py  password.py  resources.py  rest.py  site.py
fastapi_admin/templates/: base.html  create.html  edit.html  init.html  layout.html  list.html  login.html  update.html
fastapi_admin/templates/components/: alert_error.html  dropdown-show.html  dropdown.html  footer.html  language.html  link.html  model.html  select.html
fastapi_admin/templates/errors/: 401.html  403.html  404.html  500.html  maintenance.html
fastapi_admin/widgets/: __init__.py  displays.py  filters.py  inputs.py
front/: .env.development.local.example  .env.example  .env.production.local.example  .eslintrc.js  .gitignore  BASH.md  LICENSE  README-zh.md  README.md  index.html  package-lock.json  package.json  vue.config.js
front/api/: config.js  index.js  resources.js
front/api/static/: custom.css
front/public/: index.html
front/src/: App.vue  config.js  form.js  http.js  i18n.js  main.js  menu.js  storage.js
front/src/components/: AvatarCropper.vue  BDataTable.vue  CustomComponent.vue  DataChart.vue  DataForm.vue  DataTable.vue  DataValue.vue  DataView.vue  FileManager.vue  Footer.vue  FormBuilder.vue  FormField.vue  FormSelect.vue  FormSelect2.vue  FormUploader.vue  FormUploaderItem.vue  Header.vue  JsonEditor.vue  JsonPretty.vue  LocaleSwitcher.vue  NavBar.vue  Sidebar.1.vue  Sidebar.vue  TableBuilder.vue  ThemeSwitcher.vue
front/src/i18n/: en-US.json  index.js  zh-CN.json
front/src/locales/: en-US.json  zh-CN.json
front/src/router/: index.js
front/src/scss/: _bootstrap-variables.scss  _custom.scss  skin.scss  style.scss
front/src/store/: index.js  types.js
front/src/store/modules/: auth.js  (+4 more)
front/src/views/: CustomForm.vue  CustomPage.vue  CustomTable.vue  Home.vue  Layout.vue  Login.vue  Logout.vue  ResourceEdit.vue  ResourceIndex.vue  ResourceShow.vue  ResourceStat.vue  Test.vue
(+34 files in other folders)
