[tool.poetry]
name = "fastapi-admin"
version = "1.0.0"
description = "A fast admin dashboard based on FastAPI and TortoiseORM with tabler ui, inspired by Django admin."
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/fastapi-admin/fastapi-admin"
repository = "https://github.com/fastapi-admin/fastapi-admin.git"
documentation = "https://github.com/fastapi-admin/fastapi-admin"
keywords = ["fastapi", "admin", "dashboard"]
packages = [
    { include = "fastapi_admin" }
]
include = ["LICENSE", "README.md", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7"
tortoise-orm = "*"
fastapi = "*"
uvicorn = "*"
aiofiles = "*"
jinja2 = "*"
Babel = "*"
python-multipart = "*"
bcrypt = "*"

[tool.poetry.dev-dependencies]
# test
pytest = "*"
pytest-xdist = "*"
pytest-asyncio = "*"
pytest-mock = "*"
# lint
flake8 = "*"
isort = "*"
black = "^20.8b1"
mypy = "*"
pylint = "*"
# example
python-dotenv = "*"
asyncmy = "*"
# docs
mkdocs = "*"
mkdocs-material = "*"
mike = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
accel = ["uvloop"]
